--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav ul li a {
 
 /* FIN NAVBAR */
 
-/* SECTION 1 */
+/* SECTION 1 - Presentacion */
 
 #section1 {
     grid-area: section1;
@@ -100,7 +100,7 @@ nav ul li a {
 
 /* FIN SECTION 1 */
 
-/* SECTION 2 */
+/* SECTION 2 - Fechas */
 
 #section2 {
     grid-area: section2;
@@ -109,9 +109,6 @@ nav ul li a {
     padding: 10px;
 
     display: flex;
-   /*  justify-content: start;
-    align-items: flex-start;
-    font-size: 1.5em; */
 }
 
 .subtitulo {
@@ -134,7 +131,7 @@ nav ul li a {
 
 /* FIN SECTION 2 */
 
-/* SECTION 3 */
+/* SECTION 3 - Contacto */
 
 #section3 {
     grid-area: section3;
@@ -175,6 +172,7 @@ footer {
 /* FIN FOOTER */
 
 /* CONTENEDOR PADRE SECCION CONTACTO */
+
 .contacto-container {
     min-height: 100vh;
     font-family: "Roboto";
